# VirtualConsole

./: .clang-format  .travis.yml  Makefile  README.md  run_tests.sh  test.asm
Assembler/: CMakeLists.txt  README.md
Assembler/apps/virtualassembler-cli/: main.cpp
Assembler/include/virtualassembler/: Compiler.hpp  Grammar.hpp  Lexer.hpp  Parser.hpp
Assembler/src/: Compiler.cpp  Compiler.hpp  Grammar.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  main.cpp
CPU/: CMakeLists.txt  README.md
CPU/apps/virtualcpu-cli/: main.cpp
CPU/include/virtualcpu/: CPU.hpp  Instruction.hpp  Machine.hpp  Memory.hpp  Parser.hpp  RAM.hpp  ROM.hpp  RunFlags.hpp  Screen.hpp  Utils.hpp
CPU/src/: CPU.cpp  CPU.hpp  Instruction.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  Parser.cpp  Parser.hpp  RAM.cpp  RAM.hpp  ROM.hpp  RunFlags.cpp  RunFlags.hpp  Screen.cpp  Screen.hpp  Utils.cpp  Utils.hpp  main.cpp  tests.cpp
CPU/tests/functional/: functional_test.cpp  generate_testdata.sh
CPU/tests/functional/testdata/: tests_arithmetic.asm  tests_arithmetic.out  tests_increment.asm  tests_jumps_subroutines.out  tests_load.asm  tests_load.out  tests_other.out  tests_set_clear.asm  tests_set_clear.out  tests_store.asm  tests_store.out
CPU/tests/unit/: CPU_test.cpp
Editor/: README.md  project.pro
Editor/assets/gui/: untitled.ui
Editor/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  project.pro
src/: AST.hpp  Compiler.cpp  Compiler.hpp  Grammar.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  RAM16k.hpp  Screen.hpp  main.cpp  repl.cpp
tests/CPU/: tests_arithmetic.asm  tests_jumps_subroutines.asm  tests_load.asm  tests_other.asm  tests_store.asm
